# drawing-automation-app-failed..

./: .cursorrules  .gitignore  BUILD_INSTRUCTIONS.md  CODESPACES_DEVELOPMENT.md  CODESPACES_SETUP.md  COMPLETE.md  FINAL_CHECKLIST.md  QUICK_FIX.md  README.md  SETUP.md  TROUBLESHOOTING.md  index.html  install-build-tools.ps1  install-rust-bypass.ps1  install-rust.ps1  package-lock.json  package.json  setup-github.ps1  setup-vs-env.ps1  tailwind.config.js
.github/workflows/: build.yml
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: .gitkeep
src-tauri/src/: main.rs
src-tauri/src/drawing_engine/: continuous_line.rs  contour.rs  dithering.rs  matrix_dot.rs  mod.rs  scanline.rs  spiral_raster.rs  stippling.rs
src-tauri/src/image_processing/: color_matcher.rs  mod.rs  processor.rs
src-tauri/src/mouse_control/: automation.rs  mod.rs  path_optimizer.rs
src/components/canvas/: CanvasDetection.tsx  SelectionOverlay.tsx
src/components/drawing/: Controls.tsx  Countdown.tsx  DrawPage.tsx  DrawingProgress.tsx  Preview.tsx
src/components/history/: HistoryPage.tsx
src/components/layout/: MainArea.tsx  Sidebar.tsx  ThemeSelector.tsx
src/components/settings/: ColorPalette.tsx  DimensionTool.tsx  DrawingMethodSelector.tsx  SettingsPage.tsx  SpeedControl.tsx
src/components/ui/: Button.tsx  Card.tsx  Input.tsx  Modal.tsx  Toast.tsx
src/components/upload/: DropZone.tsx  (+1 more)
src/hooks/: useKeyboardShortcuts.ts
src/stores/: drawingStore.ts  imageStore.ts  settingsStore.ts  themeStore.ts
src/utils/: imageUtils.ts  tauriCommands.ts
